--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "src/index.d.ts",
   "scripts": {
-    "test": "jest",
+    "test": "jest --runInBand --detectOpenHandles",
     "build": "babel src --out-dir dist --source-maps --ignore '**/*.test.js'",
     "game": "npm run build && node ./dist/game.js",
     "_publish": "npm run test && npm run build && npm publish"
@@ -30,6 +30,7 @@
   },
   "peerDependencies": {},
   "devDependencies": {
+    "jest": "^26.2.2",
     "prettier": "^2.0.5",
     "cross-env": "^7.0.2",
     "@types/jest": "^25.2.3",
@@ -44,6 +45,6 @@
     "node-fetch": "^2.6.0",
     "@react-native-community/eslint-config": "^2.0.0",
     "@typescript-eslint/parser": "^3.7.1",
-    "cli-table": "^0.3.1"
+    "terminal-kit": "^1.42.0"
   }
 }
